# Scopio

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  PHASE1_DESIGN.md  PHASE4_DESIGN.md  PRODUCTION.md  README.md  TECH_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sample_businesses.csv
.github/workflows/: ci.yml
app/: main.py
app/api/: admin.py  analytics.py  assistant.py  auth.py  businesses.py  outreach.py  reminders.py  search_jobs.py
app/core/: config.py  db.py  deps.py  llm.py  phone.py  ratelimit.py  security.py  telemetry.py
app/models/: __init__.py  area_cache.py  business.py  conversation.py  draft.py  reminder.py  search_job.py  search_job_business.py  tenant.py  user.py
app/schemas/: assistant.py  auth.py  business.py  outreach.py  reminder.py  search_job.py
app/services/: assistant.py  (+1 more)
db/: init.sql
evals/: README.md  __init__.py  __main__.py  extraction_eval.py  judge.py  outreach_eval.py  run.py  scoring.py
extension/: README.md  common.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
scripts/: smoke_discovery.py
tests/: test_admin.py  test_assistant.py  test_contact_links.py  test_dedup.py  test_deepagent.py  test_drafts.py  test_email_providers.py  test_enrichment.py  test_eval_scoring.py  test_extractor_selection.py  test_geoapify.py  test_inbox.py  test_is_mobile.py  test_memory.py  test_normalizer.py  test_outreach.py  test_overpass_query.py  test_pipeline_chunks.py  test_ratelimit.py  test_reminders.py  test_security.py  test_targeting.py  test_websearch.py
(+35 files in other folders)
